# job-hunter

./: .gitignore  Cargo.toml
migrations/: 0003_rename_careers_page_column.sql  10_modify_company_hidden_column.sql  11_add_interviewed_column.sql  12_add_pay_unit_currency.sql  13_add_apijobs_id.sql  14_job_post_add_platform_notes_industry.sql  2_rename_career_page_column.sql  4_add_job_title_column.sql  5_modify_date_posted_column.sql  6_date_responded_typo.sql  7_add_benefits_column.sql  8_add_skills_column.sql  9_add_company_hidden_column.sql
migrations/1-initial/: down.sql  up.sql
migrations/2-rename_career_page_column/: down.sql  up.sql
migrations/3-rename_careers_page_column/: down.sql  up.sql
migrations/4-add_job_title_column/: down.sql
migrations/5-modify_date_posted_column/: down.sql  up.sql
migrations/6-date_responded_typo/: down.sql
migrations/7-add_benefits_column/: down.sql
migrations/8-add_skills_column/: down.sql
migrations/9-add_company_hidden_column/: down.sql
src/: api.rs  data.rs  job_hunter.rs  main.rs  scraper.rs  utils.rs
src/components/: icon_button.rs  mod.rs
src/db/: company.rs  job_application.rs  job_post.rs  mod.rs
